fixed red buttons not showing up on home page, changed gradient to make it look better

--- a/static/common/base.css
+++ b/static/common/base.css
@@ -31,6 +31,6 @@ body.light-theme {
 body.dark-theme {
     color:#ffffff;
     background-color: #2a2a2a;
-    background-image: linear-gradient(#141414, #ff3c3c, #141414);
+    background-image: linear-gradient(#141414, #aa0000, #141414);
     margin: 0%;
 }
